* 2019.03.04 - major update of all modules

* 2019.02.24 - complements https://github.com/ctuning/ck-artifact-evaluation 
               with external submissions validated using evaluation methodology 
               from http://cTuning.org/ae and CK workflows: http://cKnowledge.org

