@@ -1,0 +1,15 @@
+{
+  "backup_data_uid": "247299f5bb6dd85c",
+  "backup_module_uid": "b56ccd54ac2b15b9",
+  "backup_module_uoa": "component.article",
+  "control": {
+    "engine": "CK",
+    "iso_datetime": "2019-03-04T17:01:22.596546",
+    "version": [
+      "1",
+      "9",
+      "7",
+      "1"
+    ]
+  }
+}
