@@ -1,0 +1,15 @@
+{
+  "backup_data_uid": "e7921df0f4463a97",
+  "backup_module_uid": "b56ccd54ac2b15b9",
+  "backup_module_uoa": "component.article",
+  "control": {
+    "engine": "CK",
+    "iso_datetime": "2019-03-04T16:58:37.276616",
+    "version": [
+      "1",
+      "9",
+      "7",
+      "1"
+    ]
+  }
+}
