@@ -1,4 +1,5 @@
 * 2019.03.04 - major update of all modules
+             - added reproducible papers from ReQuEST-ASPLOS'18 and SysML'19
 
 * 2019.02.24 - complements https://github.com/ctuning/ck-artifact-evaluation 
                with external submissions validated using evaluation methodology 
